--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
   <link rel="icon" type="image/x-icon" href="assets/img/tit.jpg">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css" />
+  
 </head>
 <body>
   <app-root></app-root>
