--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css" />
   
 </head>
-<body>
+<body style="background-color:black">
   <app-root></app-root>
 </body>
 </html>
