--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,11 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/img/tit.jpg">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css" />
-  <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript" charset="utf-8"></script> -->
-
+  <link rel="icon" type="image/x-icon" href="assets/img/tit_icon.png">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css" /> -->
   
 </head>
 <body style="background-color:black">
-  <app-root></app-root>
-  <!-- <script type="text/javascript">
-    $(document).ready(function() {
-       $('.navbar.navbar-nav').scrollTo({duration:800});
-    });
-  </script> -->
-  
+  <app-root></app-root> 
 </body>
 </html>
